The new jupyter notebook

--- a/JupyterNotebook/Util_V1.ipynb
+++ b/JupyterNotebook/Util_V1.ipynb
@@ -137,7 +137,7 @@
     "At here, the one of improvements of sliding window technique is we don't separately throw slide windows into the neural networks, because this method is doing many overlapping compuation. Instead, we implement the sliding window method convolutionally[1], which reduces the compuating at the overlapping areas between two sliding windows.  \n",
     "<img src=\"figures/Convoluational implementation.png\"\n",
     "     alt=\"Markdown Monster icon\"\n",
-    "     style=\"float: left; margin-right: 5px;\" />\n",
+    "     style=\"float: left; margin-right: 5px;\" />  \n",
     "\n",
     "[1] Sermanet P, Eigen D, Zhang X, et al. Overfeat: Integrated recognition, localization and detection using convolutional networks[J]. arXiv preprint arXiv:1312.6229, 2013."
    ]
@@ -181,6 +181,17 @@
     "    hpred = K.sigmoid(y_pred[:, :, :, 4]) * 64 * 10\n",
     "    hpred = K.clip(x=hpred, max_value=480, min_value=50)\n",
     "    return [xpred, ypred, wpred, hpred]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tranforming the coordinate from a slide window to the image\n",
+    "<img style=\"display: block; margin: 0 auto;\"\n",
+    "     src=\"transforming the coordinates from slide window to image.PNG\"\n",
+    "     alt=\"Markdown Monster icon\"\n",
+    "     style=\"float: left; margin-right: 5px;\" />"
    ]
   },
   {
@@ -330,39 +341,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Utility tool for picking up the best prediction on each image\n",
+    "This function is to pick up the relatively best five predictive boxes among all bounding boxes in each image.  \n",
+    "Firstly, each predictive box has a score that is equal to the highest score on all classes.   \n",
+    "And we directly pick up the five predictive boxes that have the 5 highest scores as the output."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generating_consequences(results):\n",
+    "    #########################################\n",
+    "    # this is to be compatible on predict and evaluate\n",
+    "    # On predict, the input results are the all images' results and the batchsize is no longer being the setting parameter\n",
+    "    # On evaluate, the input results are a batch of images' reults. The number is equal to setting parameter\n",
+    "    global _batch_size\n",
+    "    _batch_size = K.shape(results)[0]\n",
+    "    #########################################\n",
+    "\n",
+    "    # Obtain the Probability confidence\n",
     "    Pc = results[:, :, :, 0]\n",
     "    Pc = K.reshape(x = Pc, shape=(-1, 19, 14, 1))\n",
     "    Pc = K.sigmoid(Pc)\n",
+    "    \n",
+    "    # Transforming the middle_point corrdinates with width and height of bounding boxes to \n",
+    "    # the top-left and bottom-right coordinates in bounding boxes with original point is the top-left image\n",
     "    x ,y ,w ,h = return_coordinates(y_pred=results)\n",
     "    x = K.reshape(x=x, shape=(-1, 19, 14, 1))\n",
     "    y = K.reshape(x=y, shape=(-1, 19, 14, 1))\n",
     "    w = K.reshape(x=w, shape=(-1, 19, 14, 1))\n",
     "    h = K.reshape(x=h, shape=(-1, 19, 14, 1))\n",
     "    Boxes = K.concatenate([x, y, w, h], axis=-1)\n",
+    "    \n",
+    "    # Obtain the Classes Prediction\n",
     "    Class = results[:, :, :, 5:]\n",
     "    Class = K.softmax(Class)\n",
+    "    \n",
+    "    # Compute the scores for all classes in one bounding box\n",
     "    Box_scores = Pc * Class\n",
+    "    \n",
+    "    # Picking the best as the scores in this bounding box\n",
     "    Box_classes = K.argmax(Box_scores, axis=-1)\n",
     "    Box_class_scores = K.max(Box_scores, axis=-1)\n",
+    "    \n",
     "    Box_classes = K.reshape(x=Box_classes, shape=(_batch_size, -1))\n",
     "    Box_class_scores = K.reshape(x=Box_class_scores, shape=(_batch_size, -1))\n",
     "    Boxes = K.reshape(x=Boxes, shape=(_batch_size, -1, 4))\n",
+    "    \n",
+    "    # Picking up the top five bounding boxes as the output\n",
+    "    # Finding out the indices and catch the value by gather function\n",
     "    TOPK = tf.nn.top_k(input=Box_class_scores, k=5)\n",
     "    indices = TOPK.indices\n",
-    "    temp = np.zeros(indices.shape)\n",
-    "    temp[:] = np.arange(0, _batch_size, 1).reshape(_batch_size, -1)\n",
+    "    temp = K.zeros(K.shape(x=indices), dtype='int32')\n",
+    "    tmp = K.arange(0, _batch_size, 1, dtype='int32')\n",
+    "    tmp = K.reshape(x=tmp, shape=(_batch_size, -1))\n",
+    "    temp = temp + tmp\n",
     "    indices = tf.stack([temp, indices], axis= 2)\n",
-    "    indices = tf.cast(indices, 'int64')\n",
     "    scores = tf.gather_nd(params=Box_class_scores, indices=indices)\n",
     "    boxes = tf.gather_nd(params=Boxes, indices=indices)\n",
     "    classes = tf.gather_nd(params=Box_classes, indices=indices)\n",
-    "    return boxes, classes, scores\n"
+    "    return boxes, classes, scores"
    ]
   }
  ],
