--- a/JupyterNotebook/starter_training.ipynb
+++ b/JupyterNotebook/starter_training.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Main function\n",
-    "thie file is a entry to the neural network"
+    "Thie file is to train the model.    \n",
+    "<span style=\"color:red\">Warning: our model is trained on multi-gpu server, if you don't have multi-gpu on your server, you should cancel the two lines, 'model = multi_gpu_model(model, gpus=4)'</span>"
    ]
   },
   {
@@ -21,18 +22,15 @@
     "from keras.models import load_model\n",
     "import xml.etree.ElementTree as ET\n",
     "from keras.preprocessing.image import load_img, img_to_array, array_to_img\n",
-    "#from keras.utils import multi_gpu_model\n",
+    "from keras.utils import multi_gpu_model\n",
     "import pydot\n",
-    "\n",
     "import numpy as np\n",
-    "\n",
     "from keras.utils import plot_model\n",
     "from IPython.display import SVG\n",
     "from keras.utils.vis_utils import model_to_dot\n",
     "from datetime import datetime\n",
     "import os\n",
-    "from settings import setting\n",
-    "\n"
+    "from settings import setting"
    ]
   },
   {
@@ -40,9 +38,9 @@
    "metadata": {},
    "source": [
     "## loading data\n",
-    "LOAD_IMAGE is a tool function for loading the image into binary form\n",
-    "readXML is a tool function for reading the label information with respect to a image\n",
-    "load_DATA is to load all images into a path"
+    "LOAD_IMAGE is a tool function for loading the image into binary form.  \n",
+    "readXML is a tool function for reading the label information with respect to a image.  \n",
+    "load_DATA is to load all images into a path.  "
    ]
   },
   {
@@ -169,7 +167,8 @@
     "        # to transform the class representation into one-hot encoding for cross-entropy loss  \n",
     "        one_hot_encoding = to_categorical(y=train_label[:, :, :, 6], num_classes=10)\n",
     "        train_label = np.concatenate((train_label, one_hot_encoding), axis = -1)\n",
-    "\n",
+    "        \n",
+    "        # if we don't have a existed model file .h5, we should initialize a model\n",
     "        if iniModel:\n",
     "            model = yolo.network_architecture(input_data=[640, 480, 3])\n",
     "            model = multi_gpu_model(model, gpus=4)\n",
@@ -177,6 +176,9 @@
     "            iniModel = False\n",
     "            plot_model(model=model, to_file='Architecture.png', show_layer_names=False)\n",
     "            SVG(model_to_dot(model).create(prog='dot', format='svg'))\n",
+    "        \n",
+    "        # well, if we already trained a model before, we should load the existed .h5 file \n",
+    "        # but when we have a model running, we should not load again\n",
     "        elif not isDone:\n",
     "            model = load_model(setting[\"weight_file\"], custom_objects={setting[\"loss\"]: lossFunction})\n",
     "            model = multi_gpu_model(model, gpus=4)\n",
